--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -563,6 +563,14 @@ input:-internal-autofill-selected {
     width: 100%;
 }
 
+.stories .stories-border{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 /*.stories:before {
     position: absolute;
     background: #b29f93;
