--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -561,6 +561,8 @@ input:-internal-autofill-selected {
     align-items: center;
     height: 100%;
     width: 100%;
+    position: relative;
+    z-index: 2;
 }
 
 .stories .stories-border{
@@ -574,6 +576,8 @@ input:-internal-autofill-selected {
     background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    border-radius: 50%;
+    z-index: 1;
 }
 
 /*.stories:before {
