--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -549,7 +549,6 @@ input:-internal-autofill-selected {
     height: 200px;
     width: 200px;
     margin: 0 auto;
-    border: 2px solid #fff;
     position: relative;
     cursor: pointer;
 }
@@ -564,14 +563,16 @@ input:-internal-autofill-selected {
     z-index: 2;
     background: #e7d117;
     border-radius: 50%;
+    border: 1px solid #fff;
 }
 
 .stories .stories-border{
+    border: 1px solid #fff;
     position: absolute;
     top: 0;
     left: 0;
-    width: 102%;
-    height: 102%;
+    width: 215px;
+    height: 215px;
     background: #f09433; 
     background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
     background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
@@ -579,6 +580,16 @@ input:-internal-autofill-selected {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
     border-radius: 50%;
     z-index: 1;
+    animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+		from {
+				-webkit-transform: rotate(0deg);
+		}
+		to {
+				-webkit-transform: rotate(359deg);
+		}
 }
 
 /*.stories:before {
