--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -513,6 +513,7 @@ input:-internal-autofill-selected {
     position: absolute;
     left: 0px;
     bottom: -89px;
+    cursor: pointer;
 }
 
 .mobile-logo .stories{
