--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -1704,14 +1704,14 @@ ul.tagposts-list li {
     width: 100%;
 }
 
-.archive-header_opinion{
-    padding: 0px;
+.archive-header_opinion .archive-title{
+    padding: 0px !important;
 }
 
 .archive-header_opinion .archive-banner img{
     width: 100%;
     max-width: 100%;
-    margin: 0;
+    margin: 0 !important;
     margin-bottom: -65.5px;
 }
 
