--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -70,11 +70,11 @@ blockquote p {
 }
 
 .yellow{
-    color: #e7d117;
+    color: #e7d117 !important;
 }
 
 .yellow a{
-    color: #e7d117;
+    color: #e7d117 !important;
 }
 
 /* ---------------------------*/
