--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4072,6 +4072,7 @@ article .post-content .has-content-area {
     font-weight: 400;
     font-size: 30px;
     line-height: 0px !important;
+    padding-bottom: 15%;
 }
 
 
