--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -2295,8 +2295,7 @@ ul.tagposts-list li {
     background: #fff;
     margin: 0 auto;
     width: 600px;
-    max-width: auto;
-    /* text-align: center; */
+    max-width: 90%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
