live section centrado

--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4985,6 +4985,8 @@ height: 200px !important;
 
 /* AGREGADO LUCAS */ 
 
+.live-section{text-align: center;}
+
 .timeline-InformationCircle-widgetParent , .timeline-Footer {
     display:none !important;
 }
