--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -842,6 +842,9 @@ input:-internal-autofill-selected {
 .trending-post .entry img {
     vertical-align: top;
 }
+.trending-post .entry-img{
+    position: relative;
+}
 
 .trending-post .entry-img img {
     width: 100%;
