--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -854,6 +854,13 @@ input:-internal-autofill-selected {
     width: 30px !important;
 }
 
+.trending-post .entry-img .post-author{
+    position: absolute;
+    bottom: 15px;
+    right: 0px;
+    z-index: 1;
+}
+
 
 .trending-post .titular h2 {
     font-size: 40px; 
