--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -850,8 +850,8 @@ input:-internal-autofill-selected {
     width: 100%;
 }
 
-.trending-post .post-author{
-    color: #b29f93;
+.trending-post .post-author a span{
+    color: #b29f93 !important;
 }
 
 
