--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -3354,6 +3354,9 @@ article .post-content .has-content-area {
     overflow-x: hidden;
 }
 
+.wp-caption{
+    max-width: 100%;
+}
 
 /*COMMENTS*/
 
