--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4192,15 +4192,15 @@ article .post-content .has-content-area {
     background: rgba(0, 0, 0, 0.60);
 }
 
-.encuesta.card .opcion::before{
+.encuesta.card .opcion .barraTotal{
     content: '';
+    opacity: 0.3;
     position: absolute;
     display: block;
     height: 100%;
-    width: 100%;
+    width: 0;
     transition: 300ms ease;
     background: #e7d117;
-    opacity: 0.3;
     left: 0;
     top: 0;
 }
