--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4194,7 +4194,7 @@ article .post-content .has-content-area {
 
 .encuesta.card .opcion .barraTotal{
     content: '';
-    opacity: 0.3;
+    opacity: 0.7;
     position: absolute;
     display: block;
     height: 100%;
@@ -4221,6 +4221,7 @@ article .post-content .has-content-area {
 
 .encuesta.card .titulo-opcion {
     line-height: 22px;
+    z-index: 2;
 }
 
 .encuesta.card .total {
