--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -5008,20 +5008,20 @@ height: 200px !important;
 @media only screen and (min-width: 991px) {
 
 .onlydesktop{
-    display:block; 
+    display:block;
 }
 .onlymobile{
-    display:none; 
+    display:none;
 }
 
 }
 @media only screen and (max-width: 991px) {
 
     .onlydesktop{
-        display:none; 
+        display:none !important;
     }
     .onlymobile{
-        display:block; 
+        display:block !important; 
     }
     
     }
