--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4468,6 +4468,7 @@ SECCION AUTORES
 }
 .number-two{
     width: calc(100% - 60%) !important;
+    margin-left: 30%;
 }
 .number-three{
     width: calc(100% - 72%) !important;
