--- a/wp-content/themes/elcanciller/style.css
+++ b/wp-content/themes/elcanciller/style.css
@@ -4466,9 +4466,13 @@ SECCION AUTORES
     -moz-box-shadow: 9px 4px 32px -8px rgba(0,0,0,0.66);
     box-shadow: 9px 4px 32px -8px rgba(0,0,0,0.86);
 }
-.number-two{
+.number-one{
     width: calc(100% - 60%) !important;
     margin-left: 47%;
+}
+
+.number-two{
+    width: calc(100% - 60%) !important;
 }
 .number-three{
     width: calc(100% - 72%) !important;
